data/derived/comb/progs/unify/prog4322.ml.out
Characters 27-54:
  let fixpoint (f,b) = wwhile((fun b ->  f b, b != f b)), b;;
                             ^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression should not be a function, the expected type is
('a -> 'a * bool) * 'a
